chore: updating react dom dependency

--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
   },
   "dependencies": {
     "react": "^0.14.8||^15.0.0",
-    "react-dom": "^0.14.8",
+    "react-dom": "^0.14.8||^15.0.0",
     "stickyfill": "^1.1.1"
   },
   "devDependencies": {
