--- a/package.json
+++ b/package.json
@@ -99,9 +99,12 @@
       "stylelint-config-strict"
     ]
   },
+  "peerDependencies": {
+    "react": "^0.14.8||^15.0.0||^16.0.0",
+    "react-dom": "^0.14.8||^15.0.0||^16.0.0"
+  },
   "dependencies": {
-    "react": "^0.14.8||^15.0.0",
-    "react-dom": "^0.14.8||^15.0.0",
+    "prop-types": "^15.5.0",
     "stickyfill": "^1.1.1"
   },
   "devDependencies": {
@@ -118,10 +121,11 @@
     "browserify": "^13.0.0",
     "browserify-istanbul": "^2.0.0",
     "chai": "^3.5.0",
-    "chai-enzyme": "^0.4.2",
+    "chai-enzyme": "^1.0.0-beta.0",
     "chai-spies": "^0.7.1",
     "coveralls": "^2.11.9",
-    "enzyme": "^2.2.0",
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-16": "^1.0.1",
     "eslint": "^2.8.0",
     "eslint-config-strict": "^8.5.1",
     "eslint-config-strict-react": "^8.0.1",
@@ -150,7 +154,8 @@
     "postcss-import": "^8.1.0",
     "postcss-reporter": "^1.3.3",
     "postcss-url": "^5.1.1",
-    "react-addons-test-utils": "^0.14.8||^15.0.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "semantic-release": "^4.3.5",
     "stylelint": "^6.2.2",
     "stylelint-config-strict": "^5.0.0",
